insert-wait-iigap-vs-insert-wait-iigap-holds-lock-mode-x

--- a/1.md
+++ b/1.md
@@ -86,3 +86,4 @@ update PlayerClub set ... where account_id = 561;
 
 1. [MySQL InnoDB Deadlock For 2 simple insert queries](https://dba.stackexchange.com/questions/86878/mysql-innodb-deadlock-for-2-simple-insert-queries)
 2. [Why am I getting deadlock in MySQL](https://stackoverflow.com/questions/23615641/why-am-i-getting-deadlock-in-mysql)
+3. [一个线上死锁问题分析](http://mysqllover.com/?p=437)
