insert-wait-iigap-vs-insert-wait-iigap-holds-lock-mode-x

--- a/1.md
+++ b/1.md
@@ -1,3 +1,6 @@
+insert-wait-iigap-vs-insert-wait-iigap-holds-lock-mode-x
+===
+
 ## 死锁特征
 
 1. insert WAITING FOR lock_mode X insert intention waiting
