insert-wait-iigap-vs-insert-wait-iigap-holds-lock-mode-s

--- a/2.md
+++ b/2.md
@@ -56,7 +56,7 @@ CREATE TABLE `lingluo` (
 |  | insert into lingluo values(100214,215,215,312); |  |
 | | | insert into lingluo values(100215,215,215,312); |
 | rollback; |||
-|||deadlock!|
+|||deadlock|
 
 ## 分析
 
