insert-wait-iigap-vs-insert-wait-iigap-holds-lock-mode-s

--- a/2.md
+++ b/2.md
@@ -68,4 +68,5 @@ CREATE TABLE `lingluo` (
 
 ## 参考
 
+1. [Bug #43210	Deadlock detected on concurrent insert into same table (InnoDB)](https://bugs.mysql.com/bug.php?id=43210)
 1. [有趣的insert死锁](http://www.cnblogs.com/sunss/p/3166550.html)
