delete-wait-rec-vs-delete-wait-next-key-holds-lock-mode-x

--- a/3.md
+++ b/3.md
@@ -68,5 +68,5 @@ CREATE TABLE `msg` (
 
 1. [[MySQL 学习] Innodb锁系统(1)之如何阅读死锁日志](http://mysqllover.com/?p=411)
 2. [[MySQL 学习] Innodb锁系统（2）关键函数路径](http://mysqllover.com/?p=416)
-3. [MySQL学习] Innodb锁系统(3)关键结构体及函数](http://mysqllover.com/?p=425)
+3. [[MySQL学习] Innodb锁系统(3)关键结构体及函数](http://mysqllover.com/?p=425)
 4. [[MySQL学习] Innodb锁系统(4) Insert/Delete 锁处理及死锁示例分析](http://mysqllover.com/?p=431)
