insert-wait-lock-mode-x-insert-intention-vs-insert-wait-lock-mode-x-insert-intention-holds-lock-mode-x

--- a/1.md
+++ b/1.md
@@ -1,4 +1,4 @@
-insert-wait-iigap-vs-insert-wait-iigap-holds-lock-mode-x
+insert-wait-lock-mode-x-insert-intention-vs-insert-wait-lock-mode-x-insert-intention-holds-lock-mode-x
 ===
 
 ## 死锁特征
@@ -84,6 +84,8 @@ delete from PlayerClub where account_id = 561;
 ```
 update PlayerClub set ... where account_id = 561;
 ```
+
+这里有一个有意思的点，如果 account_id = 561 不存在且大于 account_id 列的最大记录，那么在 supremum 这条记录上加 lock_mode X 锁（Next-key锁）；如果 account_id = 561 不存在且是个中间值，则加的是 gap 锁（locks gap before rec）。
 
 ## 参考
 
