insert-wait-lock-mode-x-insert-intention-vs-insert-wait-lock-mode-x-insert-intention-holds-lock-mode-x

--- a/1.md
+++ b/1.md
@@ -85,10 +85,13 @@ delete from PlayerClub where account_id = 561;
 update PlayerClub set ... where account_id = 561;
 ```
 
-这里有一个有意思的点，如果 account_id = 561 不存在且大于 account_id 列的最大记录，那么在 supremum 这条记录上加 lock_mode X 锁（Next-key锁）；如果 account_id = 561 不存在且是个中间值，则加的是 gap 锁（locks gap before rec）。
+这里有一个有意思的点，如果要删除的二级索引 account_id = 561 不存在，按理来说加的应该是 gap 锁（locks gap before rec），但是这里看到的日志却是 lock_mode X，也就是 Next-key 锁；而且更有意思的是，按理来说两个 Next-key 锁应该是冲突的，但是这里却两个事务同时在 supremum 这条记录上加了 Next-key 锁。我的理解是，这里是 gap 锁，而非 Next-key 锁，不能被日志误导，所以看到 supremum 的时候要特别注意（supremum 的 heap no = 1）。
+
+另外，插入意向锁也和 gap 锁类似，如果在最大值处插入，日志显示 `lock_mode X insert intention`，中间处插入，显示 `lock_mode X locks gap before rec insert intention`，也要注意。
 
 ## 参考
 
 1. [MySQL InnoDB Deadlock For 2 simple insert queries](https://dba.stackexchange.com/questions/86878/mysql-innodb-deadlock-for-2-simple-insert-queries)
 2. [Why am I getting deadlock in MySQL](https://stackoverflow.com/questions/23615641/why-am-i-getting-deadlock-in-mysql)
 3. [一个线上死锁问题分析](http://mysqllover.com/?p=437)
+4. https://github.com/octachrome/innodb-locks
