--- a/1.md
+++ b/1.md
@@ -87,7 +87,7 @@ update PlayerClub set ... where account_id = 561;
 
 这里有一个有意思的点，如果要删除的二级索引 account_id = 561 不存在，按理来说加的应该是 gap 锁（locks gap before rec），但是这里看到的日志却是 lock_mode X，也就是 Next-key 锁；而且更有意思的是，按理来说两个 Next-key 锁应该是冲突的，但是这里却两个事务同时在 supremum 这条记录上加了 Next-key 锁。我的理解是，这里是 gap 锁，而非 Next-key 锁，不能被日志误导，所以看到 supremum 的时候要特别注意（supremum 的 heap no = 1）。
 
-另外，插入意向锁也和 gap 锁类似，如果在最大值处插入，日志显示 `lock_mode X insert intention`，中间处插入，显示 `lock_mode X locks gap before rec insert intention`，也要注意。
+另外，插入意向锁也和 gap 锁类似，如果在最大值处插入，日志显示 `lock_mode X insert intention`，如果在中间处插入，显示 `lock_mode X locks gap before rec insert intention`，也要注意。
 
 ## 参考
 
