delete-wait-lock-mode-x-vs-delete-wait-lock-mode-x-holds-lock-mode-x-locks-rec-but-not-gap

--- a/6.md
+++ b/6.md
@@ -81,8 +81,11 @@ delete 语句的加锁有三种情况：
 ||发起删除操作，由于记录标记为删除，所以获取 Next-key 锁，和事务二的记录锁冲突|
 |重新加锁时获取 Next-key 锁，和事务三冲突，发生死锁 |.|
 
+关于这个死锁，还有另一个形式：[delete-wait-lock-mode-x-locks-rec-but-not-gap-vs-delete-wait-lock-mode-x-holds-lock-mode-x-locks-rec-but-not-gap](7.md)
+
 更多的分析可以阅读后面的参考链接。
 
 ## 参考
 
 1. [一个最不可思议的MySQL死锁分析](http://hedengcheng.com/?p=844)
+2. http://hedengcheng.com/?p=771#comment-5549
