delete-wait-lock-mode-x-vs-insert-wait-lock-mode-x-locks-gap-before-rec-insert-intention-holds-lock-mode-x-locks-rec-but-not-gap

--- a/5.md
+++ b/5.md
@@ -66,11 +66,11 @@ CREATE TABLE `test` (
 
 ## 分析
 
-这个场景和 [4.md](4.md) 一模一样，但是没办法手动重现，只能在高并发情况下可能会出现。
+这个场景和 [delete-wait-lock-mode-x-vs-insert-wait-lock-mode-s-holds-lock-mode-x-locks-rec-but-not-gap](4.md) 一模一样，但是没办法手动重现，只能在高并发情况下可能会出现。
 
 这个死锁的原因在于 insert 加锁分几个阶段：先检查唯一键约束，加 S 锁，再加插入意向锁，最后插入成功时升级为 X 锁。
 
-[4.md](4.md) 中，insert 加 S 锁时冲突导致死锁，而这里是加插入意向锁时冲突导致死锁。
+[delete-wait-lock-mode-x-vs-insert-wait-lock-mode-s-holds-lock-mode-x-locks-rec-but-not-gap](4.md) 中，insert 加 S 锁时冲突导致死锁，而这里是加插入意向锁时冲突导致死锁。
 
 ## 参考
 
