delete-wait-lock-mode-x-locks-rec-but-not-gap-vs-delete-wait-lock-mode-x-locks-rec-but-not-gap-holds-lock-mode-x-locks-rec-but-not-gap

--- a/8.md
+++ b/8.md
@@ -1,3 +1,13 @@
+delete-wait-lock-mode-x-locks-rec-but-not-gap-vs-delete-wait-lock-mode-x-locks-rec-but-not-gap-holds-lock-mode-x-locks-rec-but-not-gap
+===
+
+## 死锁特征
+
+1. delete WAITING FOR lock_mode X locks rec but not gap
+2. delete WAITING FOR lock_mode X locks rec but not gap, HOLDS lock_mode X locks rec but not gap
+
+## 死锁日志
+
 ```
 ------------------------
 LATEST DETECTED DEADLOCK
@@ -48,6 +58,8 @@ Record lock, heap no 2 PHYSICAL RECORD: n_fields 6; compact format; info bits 32
 *** WE ROLL BACK TRANSACTION (2)
 ```
 
+## 表结构
+
 ```sql
 CREATE TABLE `t` (
   `id` INT(11) NOT NULL AUTO_INCREMENT,
@@ -56,7 +68,24 @@ CREATE TABLE `t` (
 ) ENGINE=INNODB
 ```
 
+## 重现步骤
+
+| Session 1 | Session 2 |
+| --------- | --------- |
+|delete from t where id = 1||
+||delete from t where id = 2|
+|delete from t where id = 2||
+||delete from t where id = 1|
+
+也可以通过下面的 mysqlslap 命令模拟死锁场景：
+
 ```
 mysqlslap --create-schema sys -q "begin; delete from t where id = 1; delete from t where id = 2; rollback;" --number-of-queries=100000  -uroot -p
 mysqlslap --create-schema sys -q "begin; delete from t where id = 2; delete from t where id = 1; rollback;" --number-of-queries=100000  -uroot -p
 ```
+
+## 分析
+
+死锁的根本原因是有两个或多个事务之间加锁顺序的不一致导致的，这个死锁案例其实是最经典的死锁场景。
+
+首先，事务一获取 id = 1 的锁，事务二获取 id = 2 的锁；然后，事务一试图获取 id = 2 的锁，事务二试图获取 id = 1 的锁，相互等待导致死锁。
