delete-wait-lock-mode-x-locks-rec-but-not-gap-vs-delete-wait-lock-mode-x-locks-rec-but-not-gap-holds-lock-mode-x-locks-rec-but-not-gap

--- a/9.md
+++ b/9.md
@@ -1,3 +1,13 @@
+delete-wait-lock-mode-x-locks-rec-but-not-gap-vs-delete-wait-lock-mode-x-locks-rec-but-not-gap-holds-lock-mode-x-locks-rec-but-not-gap
+===
+
+## 死锁特征
+
+1. delete WAITING FOR lock_mode X locks rec but not gap
+2. delete WAITING FOR lock_mode X locks rec but not gap, HOLDS lock_mode X locks rec but not gap
+
+## 死锁日志
+
 ```
 ------------------------
 LATEST DETECTED DEADLOCK
@@ -45,6 +55,8 @@ Record lock, heap no 3 PHYSICAL RECORD: n_fields 3; compact format; info bits 0
 *** WE ROLL BACK TRANSACTION (1)
 ```
 
+## 表结构
+
 ```sql
 CREATE TABLE `t` (
   `id` INT(11) NOT NULL AUTO_INCREMENT,
@@ -57,7 +69,37 @@ CREATE TABLE `t` (
 ) ENGINE=INNODB
 ```
 
+## 重现步骤
+
+| Session 1 | Session 2 |
+| --------- | --------- |
+|delete from t where a = 4|delete from t where b = 5|
+
+也可以通过下面的 mysqlslap 命令模拟死锁场景：
+
 ```
 mysqlslap --create-schema sys -q "begin; delete from t where a = 4; rollback;" --number-of-queries=100000  -uroot -p
 mysqlslap --create-schema sys -q "begin; delete from t where b = 5; rollback;" --number-of-queries=100000  -uroot -p
 ```
+
+## 分析
+
+这个死锁现象和 [delete-wait-lock-mode-x-locks-rec-but-not-gap-vs-delete-wait-lock-mode-x-locks-rec-but-not-gap-holds-lock-mode-x-locks-rec-but-not-gap](8.md) 几乎是一模一样的，区别在于锁的索引不一样，前者正在等待索引 idx_a_b 上的锁，而后者正在等待 PRIMARY 上的锁。
+
+这个其实也是典型的由于两个事务之间加锁顺序不一致导致的死锁场景，虽然两个事务都只有一条 SQL 语句，但是这两条语句加锁的顺序是有区别的，如下：
+
+事务一 `delete from t where a = 4` 走 idx_a_b 索引，首先会对 a = 4 对应的 idx_a_b 二级索引加锁，然后对主键索引 id = 2 加锁，最后会给 a = 4 对应的 idx_b 二级索引加锁；事务二 `delete from t where b = 5` 走的是 idx_b 索引，首先对 b = 5 对应的 idx_b 二级索引加锁，然后对主键索引 id = 2 加锁，最后会给 b = 5 对应的 idx_a_b 二级索引加锁，如下：
+
+| Session 1 | Session 2 |
+| --------- | --------- |
+||对 idx_b 索引 b = 5 加锁|
+||对主键 id = 2 加锁|
+|对 idx_a_b 索引 a = 4 加锁||
+|对主键 id = 2 加锁，等待||
+||对 idx_a_b 索引 a = 4 加锁，等待，死锁|
+
+这里的例子是 delete 语句，通过二级索引删除记录的加锁顺序为：二级索引（WHERE使用到二级索引）–> 主键索引 –> 所有其它二级索引；如果是 update 语句，加锁顺序也类似，通过二级索引更新记录的加锁顺序为：二级索引（WHERE条件使用二级索引）–> 主键索引 –> 包含更新字段的其它二级索引。
+
+## 参考
+
+1. [InnoDB inplace-update加锁流程分析](http://www.gpfeng.com/?p=406)
