delete-wait-lock-mode-x-locks-rec-but-not-gap-vs-delete-wait-lock-mode-x-locks-rec-but-not-gap-holds-lock-mode-x-locks-rec-but-not-gap

--- a/8.md
+++ b/8.md
@@ -89,3 +89,14 @@ mysqlslap --create-schema sys -q "begin; delete from t where id = 2; delete from
 死锁的根本原因是有两个或多个事务之间加锁顺序的不一致导致的，这个死锁案例其实是最经典的死锁场景。
 
 首先，事务一获取 id = 1 的锁，事务二获取 id = 2 的锁；然后，事务一试图获取 id = 2 的锁，事务二试图获取 id = 1 的锁，相互等待导致死锁。
+
+这个死锁并不难理解，不过根据这个死锁日志倒推出死锁场景却并不容易，因为有些死锁场景和这个几乎一模一样，譬如 [delete-wait-lock-mode-x-locks-rec-but-not-gap-vs-delete-wait-lock-mode-x-locks-rec-but-not-gap-holds-lock-mode-x-locks-rec-but-not-gap](9.md)，而且这种死锁很可能是三个或三个以上的事务导致的，譬如下面这样：
+
+| Session 1 | Session 2 | Session 3 |
+| --------- | --------- | --------- |
+|delete from t where id = 1|delete from t where id = 2|delete from t where id = 3|
+||delete from t where id = 1||
+|||delete from t where id = 2|
+|delete from t where id = 3|||
+
+这种场景的死锁日志和上述两个事务的死锁日志没有任何区别，所以具体情况还需要具体分析。
