delete-wait-lock-mode-x-locks-rec-but-not-gap-vs-delete-wait-lock-mode-x-locks-rec-but-not-gap-holds-lock-mode-x-locks-rec-but-not-gap

--- a/8.md
+++ b/8.md
@@ -100,3 +100,9 @@ mysqlslap --create-schema sys -q "begin; delete from t where id = 2; delete from
 |delete from t where id = 3|||
 
 这种场景的死锁日志和上述两个事务的死锁日志没有任何区别，所以具体情况还需要具体分析。
+
+如果事务执行的两个 SQL 语句不属于同一个表，死锁情形是一样的，参考[1]。
+
+## 参考
+
+1. [MySQL死锁案例分析（一）](http://www.fordba.com/mysql_dead_lock_1st.html)
