insert-wait-lock-mode-x-insert-intention-vs-insert-wait-lock-mode-x-insert-intention-holds-lock-mode-s

--- a/2.md
+++ b/2.md
@@ -70,3 +70,4 @@ CREATE TABLE `lingluo` (
 
 1. [Bug #43210	Deadlock detected on concurrent insert into same table (InnoDB)](https://bugs.mysql.com/bug.php?id=43210)
 1. [有趣的insert死锁](http://www.cnblogs.com/sunss/p/3166550.html)
+1. [【MySQL】死锁案例之四](http://blog.itpub.net/22664653/viewspace-2145092/)
