delete-wait-lock-mode-x-vs-insert-wait-lock-mode-x-locks-gap-before-rec-insert-intention-holds-lock-mode-x

--- a/12.md
+++ b/12.md
@@ -68,3 +68,4 @@ insert into ty(a,b) values(2,3),(5,4),(6,7);
 ## 参考
 
 1. [【MySQL】如何阅读死锁日志](http://blog.itpub.net/22664653/viewspace-2145133/)
+2. [【MySQL】死锁案例之一](http://blog.itpub.net/22664653/viewspace-2145073/)
