--- a/12.md
+++ b/12.md
@@ -4,7 +4,7 @@ delete-wait-lock-mode-x-vs-insert-wait-lock-mode-x-locks-gap-before-rec-insert-i
 ## 死锁特征
 
 1. delete WAITING FOR lock_mode X
-2. delete WAITING FOR lock_mode X locks gap before rec insert intention, HOLDS lock_mode X
+2. insert WAITING FOR lock_mode X locks gap before rec insert intention, HOLDS lock_mode X
 3. 隔离级别：RR
 
 ## 死锁日志
@@ -14,7 +14,7 @@ delete-wait-lock-mode-x-vs-insert-wait-lock-mode-x-locks-gap-before-rec-insert-i
 LATEST DETECTED DEADLOCK
 ------------------------
 2017-09-09 22:34:13 7f78eab82700
-*** (1) TRANSACTION: #事务1
+*** (1) TRANSACTION:
 TRANSACTION 462308399, ACTIVE 33 sec starting index read
 mysql tables in use 1, locked 1
 LOCK WAIT 2 lock struct(s), heap size 360, 1 row lock(s)
