--- a/2.md
+++ b/2.md
@@ -71,3 +71,4 @@ CREATE TABLE `lingluo` (
 1. [Bug #43210	Deadlock detected on concurrent insert into same table (InnoDB)](https://bugs.mysql.com/bug.php?id=43210)
 1. [有趣的insert死锁](http://www.cnblogs.com/sunss/p/3166550.html)
 1. [【MySQL】死锁案例之四](http://blog.itpub.net/22664653/viewspace-2145092/)
+1. [Locks Set by Different SQL Statements in InnoDB](https://dev.mysql.com/doc/refman/5.5/en/innodb-locks-set.html)
