insert-wait-lock-mode-x-insert-intention-vs-insert-wait-lock-mode-x-insert-intention-holds-lock-mode-x

--- a/1.md
+++ b/1.md
@@ -95,3 +95,4 @@ update PlayerClub set ... where account_id = 561;
 2. [Why am I getting deadlock in MySQL](https://stackoverflow.com/questions/23615641/why-am-i-getting-deadlock-in-mysql)
 3. [一个线上死锁问题分析](http://mysqllover.com/?p=437)
 4. https://github.com/octachrome/innodb-locks
+5. [一个死锁问题](http://xiaobaoqiu.github.io/blog/2016/07/22/%5B%3F%5D-ge-si-suo-wen-ti/)
