INSERT 时对 unique key 进行唯一性校验时加的是 Next-Key 锁

--- a/2.md
+++ b/2.md
@@ -62,8 +62,8 @@ CREATE TABLE `lingluo` (
 
 这个死锁的分析分三步：
 
-1. 三个事务依次执行 insert 语句，由于 (b,c) 是唯一索引，所以后两个事务会出现唯一键冲突。但此时要注意的是事务一还没有提交，所以并不会立即报错。insert 语句本来加的是隐式锁，在出现唯一键冲突时，事务一的隐式锁升级为显式锁（LOCK_REC_NOT_GAP | LOCK_REC | LOCK_X），事务二和事务三为了判断是否出现唯一键冲突，必须进行一次当前读，所以进入锁等待（LOCK_REC_NOT_GAP | LOCK_WAIT | LOCK_S）；
-2. 事务一回滚，此时事务二和事务三成功获取记录上的 S 锁，由于记录不存在，所以是 GAP 锁（LOCK_GAP | LOCK_REC | LOCK_S）；
+1. 三个事务依次执行 insert 语句，由于 (b,c) 是唯一索引，所以后两个事务会出现唯一键冲突。但此时要注意的是事务一还没有提交，所以并不会立即报错。insert 语句本来加的是隐式锁，在出现唯一键冲突时，事务一的隐式锁升级为显式锁（LOCK_REC_NOT_GAP | LOCK_REC | LOCK_X），事务二和事务三为了判断是否出现唯一键冲突，必须进行一次当前读，加的锁是 Next-Key 锁，所以进入锁等待（LOCK_GAP | LOCK_REC | LOCK_S | LOCK_WAIT）。要注意的是，就算在 RC 隔离级别下，一样会加 Next-Key 锁，所以说出现 GAP 锁不一定就是 RR 隔离级别;
+2. 事务一回滚，此时事务二和事务三成功获取记录上的 S 锁（LOCK_GAP | LOCK_REC | LOCK_S）；
 3. 事务二和事务三继续执行插入操作，需要依次请求记录上的插入意向锁（LOCK_INSERT_INTENTION | LOCK_GAP | LOCK_X），插入意向锁和 GAP 锁冲突，所以事务二等待事务三，事务三等待事务二，形成死锁。
 
 ## 参考
