--- a/17.md
+++ b/17.md
@@ -93,13 +93,21 @@ INSERT INTO t16(id, xid, valid) VALUES(10, 1, 1);
 
 | Session 1 | Session 2 |
 | --- | --- |
-|update t16 set xid = 3, valid = 0 where xid = 3;|update t16 set xid = 3, valid = 1 where xid = 2;|
+|update t16 set xid = 3, valid = 1 where xid = 2;|update t16 set xid = 3, valid = 0 where xid = 3;|
 
 ## 分析
 
-这个死锁和 16 的场景一模一样。
+首先要明白 UPDATE 的加锁顺序：在 InnoDB 中，通过二级索引更新记录，首先会在 WHERE 条件使用到的二级索引上加 Next-Key 类型的X锁，以防止查找记录期间的其它插入/删除记录，然后通过二级索引找到 primary key 并在 primary key 上加 Record 类型的X锁，之后更新记录并检查更新字段是否是其它索引中的某列，如果存在这样的索引，通过 update 的旧值到二级索引中删除相应的 entry，此时x锁类型为 Record。
 
-在InnoDB中，通过二级索引更新记录，首先会在WHERE条件使用到的二级索引上加Next-key类型的X锁，以防止查找记录期间的其它插入/删除记录，然后通过二级索引找到primary key并在primary key上加Record类型的X锁，之后更新记录并检查更新字段是否是其它索引中的某列，如果存在这样的索引，通过update的旧值到二级索引中删除相应的entry，此时x锁类型为Record
+这个死锁和案例 16 的场景一模一样。
+
+上例中，对二级索引 xid_valid 的更新过程如下所示：
+
+![](../images/16-17.jpeg)
+
+在事务 2 中， `update t16 set xid = 3, valid = 0 where xid = 3` 首先会对 `xid = 3` 的三条记录加上 Next-Key 锁，并在 supremum 上加 Gap 锁，然后开始更新二级索引，由于更新的时候会将新纪录插入到新的位置，所以和 INSERT 加锁流程类似，需要加插入意向锁，如果该位置有 Gap 锁，则会阻塞。
+
+同理，在事务 1 中，`update t16 set xid = 3, valid = 1 where xid = 2` 首先会对 `xid = 2` 的三条记录加上 Next-Key 锁，并在 `2-1|8` 和 `3-0|9` 之间加上 Gap 锁，很显然，上面的事务 2 会往 `2-1|8` 和 `3-0|9` 之间插入新记录，所以事务 2 阻塞。同时，事务 1 在处理插入新记录时，和事务 2 的几个 Next-Key 锁冲突，从而导致死锁。
 
 ## 参考
 
