更新图片地址

--- a/16.md
+++ b/16.md
@@ -90,7 +90,7 @@ INSERT INTO t16(id, xid, valid) VALUES(10, 1, 1);
 
 和案例 17 一样，对二级索引 xid_valid 的更新过程如下所示：
 
-![](../images/16-17.jpeg)
+![](../master/images/16-17.jpeg)
 
 在事务 2 中， `update t16 set xid = 3, valid = 1 where xid = 2` 首先会对 `xid = 2` 的三条记录加上 Next-Key 锁，并在 `2-1|8` 和 `3-0|9` 之间加上 Gap 锁，然后开始更新二级索引，更新后的位置会加记录锁（lock_mode X locks rec but not gap），而在更新的时候，会将新纪录插入到新的位置，所以和 INSERT 加锁流程类似，需要加插入意向锁，如果该位置有 Gap 锁，则会阻塞。
 
