--- a/17.md
+++ b/17.md
@@ -103,7 +103,7 @@ INSERT INTO t16(id, xid, valid) VALUES(10, 1, 1);
 
 上例中，对二级索引 xid_valid 的更新过程如下所示：
 
-![](../images/16-17.jpeg)
+![](../master/images/16-17.jpeg)
 
 在事务 2 中， `update t16 set xid = 3, valid = 0 where xid = 3` 首先会对 `xid = 3` 的三条记录加上 Next-Key 锁，并在 supremum 上加 Gap 锁，然后开始更新二级索引，由于更新的时候会将新纪录插入到新的位置，所以和 INSERT 加锁流程类似，需要加插入意向锁，如果该位置有 Gap 锁，则会阻塞。
 
