--- a/4.md
+++ b/4.md
@@ -55,6 +55,12 @@ CREATE TABLE `test` (
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 ```
 
+初始数据：
+
+```
+insert into test(id, a) values(1,1),(2,2),(3,3),(4,4),(5,5),(6,6),(7,7),(8,8);
+```
+
 ## 重现步骤
 
 | Session 1 | Session 2 |
