--- a/4.md
+++ b/4.md
@@ -75,7 +75,7 @@ delete 语句正常情况下会对存在的记录加记录锁（lock_mode X lock
 
 再从事务二的 `undo log entries 2` 可以推测在执行 insert 之前还执行了至少一条语句，从它 HOLDS 的锁是 lock_mode X locks rec but not gap，并且 page no 也是 923，大致可以猜出事务二先执行了 delete 语句。
 
-另外，事务二正在执行 insert 语句，并尝试获取 lock mode S waiting 锁，这是为了检测唯一键是否重复，必须进行一次当前读，要加 S 锁。
+另外，事务二正在执行 insert 语句，并尝试获取 lock mode S waiting 锁，这是为了检测唯一键是否重复，必须进行一次当前读，要加 S 锁。要注意的是，这里的 S 锁是 lock mode S，而不是 lock_mode S locks rec but not gap，，也就是说检测唯一键加的是 Next-Key 锁，而不是记录锁。
 
 ## 参考
 
