--- a/4.md
+++ b/4.md
@@ -80,3 +80,4 @@ delete 语句正常情况下会对存在的记录加记录锁（lock_mode X lock
 ## 参考
 
 1. [记录一次Mysql死锁排查过程](http://www.kissyu.org/2017/02/19/%E8%AE%B0%E5%BD%95%E4%B8%80%E6%AC%A1Mysql%E6%AD%BB%E9%94%81%E6%8E%92%E6%9F%A5%E8%BF%87%E7%A8%8B/)
+1. [MySQL · 引擎特性 · InnoDB 事务锁系统简介](http://mysql.taobao.org/monthly/2016/01/01/)
