--- a/3.md
+++ b/3.md
@@ -62,7 +62,11 @@ CREATE TABLE `msg` (
 
 那么为什么事务二没有走二级索引？原因很可能是事务二的 WHERE 条件匹配的数据行太多，这种情况 MySQL 的优化器会认为走二级索引回表效率低，还不如直接走主键全表扫描。
 
-虽然两个 delete 语句很类似，但是由于走不同索引，对主键索引的加锁顺序的不一致将导致死锁。
+虽然两个 delete 语句很类似，但是由于走不同索引，对主键索引的加锁顺序的不一致将导致死锁。dd
+
+***行锁是一行一行加的，session a在等space id 203 page no 475912，session b在等space id 203 page no 1611099，且持有space id 203 page no 475912，应该是session a持有space id 203 page no 475912，导致互相等待了***
+
+
 
 ## 参考
 
